HMAN-942: Fixed Sonar flagged issues in HearingManagementControllerIT
Fixed issues flagged by Sonar in HearingManagementControllerIT.